# homework_19.1

./: README.md  main.py  pyproject.toml
css/: index.html
