[tool.poetry]
name = "homework-19-1"
version = "0.1.0"
description = ""
authors = ["tatyana lozovaya <tatka8632@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_19"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
